--- a/QuestTracker.csproj
+++ b/QuestTracker.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
+    <PackageReference Include="OpenAI" Version="2.5.0" />
     <PackageReference Include="Twilio" Version="7.13.4" />
   </ItemGroup>
 
